@@ -1,7 +1,8 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
-04/11/2016 21:44 - Implemented password check for login
+04/11/2016 20:40 - Implemented avatar upload in user registration
+04/11/2016 19:44 - Implemented password check for login
 04/11/2016 16:40 - Made some changes to the error messages
 04/11/2016 16:39 - Added transaction display to the homepage
 04/11/2016 15:33 - Added some error messages
